[build-system]
requires = [ "poetry-core>=1.0.0", "poetry-dynamic-versioning",]
build-backend = "poetry_dynamic_versioning.backend"

[tool.poetry]
name = "rgvflood"
version = "v0.0.0"
description = "Rio Grande Valley Flood Management"
authors = ["Andrew Ernest <anernest@ratesresearch.org>"]
license = "MIT"
readme = "README.rst"

[tool.poetry.dependencies]
python = "^3.10"
spyce = {path = "../Spyce", develop = true}
waterwizard = {path = "../WaterWizard", develop = true}
geonodegcp = {path = "../GeoNodeGCP", develop = true}
reonode = {path = "../REONode", develop = true}
reoncc = {path = "../REONcc", develop = true}

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
style = "semver"