[build-system]
requires = [ "poetry-core>=1.0.0", "poetry-dynamic-versioning",]
build-backend = "poetry_dynamic_versioning.backend"

[tool.poetry]
name = "rgvflood"
version = "0.0.1"
description = "Rio Grande Valley Flood Management"
authors = ['Andrew Ernest N.S. Ernest, Ph.D., P.E., BCEE', 'William Kirkey, Ph.D.', 'Christopher Fuller, Ph.D.', 'Skyler LeVrier, M.S.', 'Linda Navarro, M.S.', 'Ivan Santos-Chavez, M.S.']
license = "MIT"
readme = "README.rst"

[tool.poetry.dependencies]
python = "^3.10"
spyce = {path = "../Spyce", develop = true}
waterwizard = {path = "../WaterWizard", develop = true}
geonodegcp = {path = "../GeoNodeGCP", develop = true}
reonode = {path = "../REONode", develop = true}
reoncc = {path = "../REONcc"}


[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
style = "semver"